Upgrade to nginx 1.17.3
This should address CVE-2019-9511, CVE-2019-9513, CVE-2019-9516:
https://www.nginx.com/blog/nginx-updates-mitigate-august-2019-http-2-vulnerabilities/

--- a/src/commcare_cloud/ansible/deploy_proxy.yml
+++ b/src/commcare_cloud/ansible/deploy_proxy.yml
@@ -7,7 +7,7 @@
       file: path="{{ nginx_static_home }}" owner="{{ cchq_user }}" group="{{ cchq_user }}" mode=0755 state=directory
 
     - name: install nginx
-      include_role:
+      import_role:
         name: nginx
         tasks_from: install
       when: not nginx_installed|default(False)
